Updated eip docs and tools